trying to fix alignment in mobile app

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@ h3 {
 body {
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
   width: 100%;
+  padding: 20px;
 }
 
 .container {
